--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "react-dom": "19.0.0-rc-66855b96-20241106",
     "react-resizable-panels": "^2.1.7",
     "tailwind-merge": "^2.5.5",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^5.0.2"
   },
   "devDependencies": {
     "@tailwindcss/typography": "^0.5.15",
@@ -33,6 +34,7 @@
     "eslint": "^8",
     "eslint-config-next": "15.0.3",
     "postcss": "^8",
+    "sass": "^1.83.0",
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   }
