Copilotkit does not work with turpopack, turn off first

--- a/package.json
+++ b/package.json
@@ -3,16 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "dev": "next dev --turbopack",
+    "dev": "next dev",
     "build": "next build",
     "start": "next start",
     "lint": "next lint"
   },
   "dependencies": {
     "@clerk/nextjs": "^6.5.2",
-    "@copilotkit/react-core": "^1.4.7",
-    "@copilotkit/react-ui": "^1.4.7",
-    "@copilotkit/runtime": "^1.4.7",
+    "@copilotkit/react-core": "^1.5.13",
+    "@copilotkit/react-textarea": "^1.5.13",
+    "@copilotkit/react-ui": "^1.5.13",
+    "@copilotkit/runtime": "^1.5.13",
     "@radix-ui/react-slot": "^1.1.0",
     "@tiptap/pm": "^2.10.3",
     "@tiptap/react": "^2.10.3",
